; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/serf/auth/extr_auth_digest.c_build_digest_ha1.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/serf/auth/extr_auth_digest.c_build_digest_ha1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@APR_MD5_DIGESTSIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"%s:%s:%s\00", align 1
@APR_SUCCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8**, i8*, i8*, i8*, i32*)* @build_digest_ha1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @build_digest_ha1(i8** %0, i8* %1, i8* %2, i8* %3, i32* %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  %16 = alloca i32, align 4
  store i8** %0, i8*** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i8* %3, i8** %10, align 8
  store i32* %4, i32** %11, align 8
  %17 = load i32, i32* @APR_MD5_DIGESTSIZE, align 4
  %18 = zext i32 %17 to i64
  %19 = call i8* @llvm.stacksave()
  store i8* %19, i8** %13, align 8
  %20 = alloca i8, i64 %18, align 16
  store i64 %18, i64* %14, align 8
  %21 = load i32*, i32** %11, align 8
  %22 = load i8*, i8** %8, align 8
  %23 = load i8*, i8** %10, align 8
  %24 = load i8*, i8** %9, align 8
  %25 = call i8* @apr_psprintf(i32* %21, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* %22, i8* %23, i8* %24)
  store i8* %25, i8** %12, align 8
  %26 = load i8*, i8** %12, align 8
  %27 = load i8*, i8** %12, align 8
  %28 = call i32 @strlen(i8* %27)
  %29 = call i64 @apr_md5(i8* %20, i8* %26, i32 %28)
  store i64 %29, i64* %15, align 8
  %30 = load i64, i64* %15, align 8
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %5
  %33 = load i64, i64* %15, align 8
  store i64 %33, i64* %6, align 8
  store i32 1, i32* %16, align 4
  br label %39

34:                                               ; preds = %5
  %35 = load i32*, i32** %11, align 8
  %36 = call i8* @hex_encode(i8* %20, i32* %35)
  %37 = load i8**, i8*** %7, align 8
  store i8* %36, i8** %37, align 8
  %38 = load i64, i64* @APR_SUCCESS, align 8
  store i64 %38, i64* %6, align 8
  store i32 1, i32* %16, align 4
  br label %39

39:                                               ; preds = %34, %32
  %40 = load i8*, i8** %13, align 8
  call void @llvm.stackrestore(i8* %40)
  %41 = load i64, i64* %6, align 8
  ret i64 %41
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i8* @apr_psprintf(i32*, i8*, i8*, i8*, i8*) #2

declare dso_local i64 @apr_md5(i8*, i8*, i32) #2

declare dso_local i32 @strlen(i8*) #2

declare dso_local i8* @hex_encode(i8*, i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
